...
              const SizedBox(height: NkSpacing.s),
              if (_showEmojiPicker) _buildEmojiPicker(),
              if (!_showEmojiPicker) ...[
                Form(
                  key: _formKey,
                  child: TextFormField(
                    key: const Key('field_emoji_name'),
                    controller: _nameController,
                    style: const TextStyle(color: NkColors.onDark),
                    decoration: InputDecoration(
                      labelText: 'Nombre del estado',
                      labelStyle: NkTextStyle.meta,
                      hintText: 'Ej: Natación, Guitarra, Doctor',
...
